[package]
name = "proc-macro0"
version = "1.0.40"
license = "MIT OR Apache-2.0"
edition = "2018"
description = """
A fork of proc-macro2 that trades in actual procedural macro support for the ability to be used from multiple threads.
"""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
once_cell = "1.13.0"
parking_lot = "0.12.1"
unicode-ident = "1.0"
